--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+@layer components{
+  .accordion_grid{
+    @apply sm:block xsm:flex lg:flex items-center justify-between;
+  }
+  .all_flex{
+    @apply flex items-center;
+  }
+
+  .style-1{
+    @apply bg-[#F4F4F4] py-1 justify-center rounded-[4px];
+  }
+
+  .style-1-svg{
+    @apply mr-3 p-1 bg-[#0000000d] rounded-md cursor-pointer;
+  }
+  
+
+  .count-input{
+    @apply bg-transparent text-center mt-2 outline-0 border-b-2 border-gray-400 w-7;
+  }
+  
+
+  .style-1-input{
+    @apply text-sm py-[2px] px-2 text-center rounded-sm border-none outline-none bg-[#0000000d] ;
+  }
+
+  .count-input-title{
+    @apply text-sm w-12 text-center;
+  }
+
+  .form-alert{
+    @apply absolute top-full py-2 rounded-[4px] mt-2 px-3 w-full bg-zinc-500 text-white text-xs hidden;
+  }
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+*{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input::placeholder{
+  color: #2c2c2c;
+}
+
+input:disabled::placeholder{
+  color: #2c2c2c52;
+}
+
+input:disabled{
+  color: #2c2c2c52;
+}
+
+.css-1o9s3wi-MuiInputBase-input-MuiOutlinedInput-input{
+  padding: 8px 16px !important;
+  padding-left: 0 !important;
 }
